Fix tab overflow in smaller resolution

--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -31,7 +31,7 @@
 }
 
 .tab {
-  min-width: "33%" !important;
+  min-width: 33% !important;
 }
 
 .twittertimeline, .tabbedPane, .achievements {
